# blacksmith_hub

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  agent_foundry_manager.sh  ai_forge_manager.sh  bot_foundry_manager.sh  bot_foundry_manager.sh.backup_v2  docker-compose.yml  the_forge_manager.sh  the_forge_manager.sh.backup  whisper_manager.sh
ai_forge/: Cargo.toml
ai_forge/src/: main.rs
app/: Cargo.toml
app/probiot/: Cargo.toml
app/probiot/messages/: start_message.txt
app/probiot/src/: handlers.rs  main.rs  probiot_utils.rs  user_message_processing.rs
app/request_app_bot/: Cargo.toml
app/request_app_bot/src/: handlers.rs  lib.rs  utils.rs
app/src/: default_message_handler.rs  main.rs
app/src/groot_bot/: chat_moderation.rs  chat_moderation_utils.rs  groot_bot_handlers.rs  groot_bot_utils.rs  mod.rs  resources_cmd_handler.rs
app/src/probiot/: mod.rs  probiot_handlers.rs  probiot_user_message_processing.rs  probiot_utils.rs  start_probiot.rs
app/src/probiot_bot/: mod.rs  probiot_bot_handlers.rs  probiot_bot_user_message_processing.rs  probiot_bot_utils.rs
app/src/request_app_bot/: mod.rs  request_app_bot_handlers.rs  start_request_app_bot.rs
app/src/tester/: mod.rs  start_tester_bot.rs  tester_bot_handlers.rs
app/src/tester_bot/: mod.rs  start_tester_bot.rs  tester_bot_handlers.rs
app/src/the_viper_room_bot/: mod.rs  start_the_viper_room_bot.rs  the_viper_room_bot_handlers.rs  the_viper_room_bot_local_utils.rs
app/src/w3a_bot/: mod.rs  start_w3a_bot.rs  w3a_bot_handlers.rs
app/the_viper_room_bot/: Cargo.toml
app/the_viper_room_bot/src/: handlers.rs  lib.rs  utils.rs
bot_foundry/: Cargo.toml
bot_foundry/src/: main.rs
bot_foundry/src/groot_bot/: chat_moderation.rs  chat_moderation_utils.rs  groot_bot_callback_query_handler.rs  groot_bot_handlers.rs  groot_bot_utils.rs  mod.rs  resources_cmd_handler.rs  subscription.rs
bot_foundry/src/probiot_bot/: probiot_bot_handlers.rs
bot_foundry/src/stat_bot/: calendar_utils.rs  date_selection_handlers.rs  date_validation.rs  mod.rs  stat_bot_handlers.rs  stat_bot_utils.rs  statistics_processing.rs
bot_foundry/src/tester_bot/: mod.rs
bot_foundry/src/the_viper_room_bot/: mod.rs  the_viper_room_bot_callback_query_handler.rs  the_viper_room_bot_command_handler.rs  the_viper_room_bot_handlers.rs  the_viper_room_bot_local_utils.rs  the_viper_room_bot_message_handler.rs  the_viper_room_bot_utils.rs
bot_foundry/src/w3a_bot/: w3a_bot_handlers.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/ai/: ai.rs  anthropic_client.rs  google_client.rs  mod.rs  utils.rs
core/src/ai/common/: anthropic.rs  common.rs  google.rs  mod.rs  openai.rs  voice_processing.rs
core/src/ai/request_app/: mod.rs  request_app.rs
core/src/config/: config.rs  server_config.rs
core/src/gpu_client/: immers_cloud_client.rs  mod.rs
core/src/grammers/: grammers_functionality.rs  mod.rs
core/src/local_db/: local_db.rs  mod.rs
core/src/local_db/blacksmith_web/: chat_history_storage.rs  mod.rs  statistics.rs
core/src/local_db/tg_bot/: mod.rs  tg_bot_local_db.rs
core/src/local_db/the_viper_room/: channel_management.rs  mod.rs  user_management.rs
core/src/message_processing_flow/: analyze_query_complexity.rs  check_request_for_crap_content.rs  check_request_type.rs  clarify_request.rs  generate_aspects.rs  llm_recommendation_system.rs  message_processing_flow.rs  mod.rs
core/src/message_processing_flow/tg_bot/: default_message_handler.rs  mod.rs
core/src/message_processing_flow/web/: default_message_handler.rs
core/src/models/: mod.rs
core/src/models/blacksmith_web/: blacksmith_web.rs  mod.rs  qdrant_collections.rs
core/src/models/common/: ai.rs  app_name.rs  avatar_request_response.rs  dialogue_cache.rs  mod.rs  qdrant_collection_manager.rs  query_type.rs  request_type.rs  system_messages.rs  system_roles.rs
core/src/models/request_app/: request_app.rs
core/src/models/tg_agent/: agent_davon.rs  bot_alias.rs  mod.rs
core/src/models/tg_bot/: mod.rs
core/src/models/the_viper_room/: common.rs  db_models.rs  mod.rs  the_viper_room.rs  the_viper_room_bot.rs  the_viper_room_web_ui.rs
core/src/models/uniframe_studio/: accounting_models.rs  auth_models.rs  dubbing_client.rs  mod.rs  payment_models.rs  uniframe_dubbing_client.rs  uniframe_studio.rs
core/src/models/w3a_web/: mod.rs  qdrant_collections.rs
core/src/rag_system/: hybrid_search_types.rs  mod.rs  query_decompression_types.rs  types.rs
core/src/rag_system/context_builder/: default.rs  mod.rs
core/src/rag_system/get_results_via_rag_system/: get_results_via_rag_system.rs  mod.rs
core/src/rag_system/retriever/: mod.rs  qdrant.rs
core/src/rag_system/vectorizer/: mod.rs  openai.rs
core/src/state/: llm_client_init_trait.rs  llm_processing_trait.rs  mod.rs  qdrant_client_init_trait.rs
core/src/state/blacksmith_web/: app_state.rs
core/src/state/request_app/: app_state.rs
core/src/state/server/: app_state.rs
core/src/state/server_common/: app_state.rs
core/src/state/tg_agent/: app_state.rs
core/src/state/tg_bot/: app_state.rs  groot_bot_extended_app_state.rs  mod.rs
core/src/state/the_viper_room/: app_state.rs  app_state_operation.rs  mod.rs
core/src/state/uniframe_studio/: app_state.rs
core/src/telegram_client/: grammers_functionality.rs  mod.rs  telegram_client.rs
core/src/temp_cache/: mod.rs  temp_cache_traits.rs  temp_cache_utils.rs
core/src/utils/: common.rs  mod.rs  moscow_time.rs
core/src/utils/server/: server.rs
core/src/utils/tg_bot/: groot_bot.rs  mod.rs  temp_cache_operations.rs  tg_bot.rs
core/src/utils/the_viper_room/: mod.rs  news_block_creation.rs  podcast_voiceover.rs  (+1 more)
core/src/vector_db/: vector_db.rs
forge/: Cargo.toml
forge/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/routes/: mod.rs
tooling/whisper/: Cargo.toml  README.md  config.yaml
tooling/whisper/src/: handlers.rs  main.rs
tools/: Cargo.toml
tools/src/: main.rs  qdrant_data_pre_processing.rs  qdrant_data_processing.rs  tools_utils.rs  video_to_audio_converter.rs  w3a_qdrant_data_processing.rs
(+269 files in other folders)
