[workspace]
members = [
    "core",
    "the_forge",
    "bot_foundry",
    "tools",
]
default-members = ["the_forge"]

resolver = "2"

[workspace.dependencies]
# Async Runtime & Web Framework
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.8.1"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
http = "1.1.0"
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }

# Telegram Client Libraries
teloxide = { version = "0.15.0", features = ["macros"] }
teloxide-core = { version = "0.11.2", package = "teloxide-core" }
grammers-client = "0.7.0"
grammers-session = "0.7.0"

# Database & Storage
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "migrate"] }
qdrant-client = "1.13.0"

# AI Services
async-openai = "0.28.0"
tiktoken-rs = "0.6.0"

# Serialization & Data Handling
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
config = "0.15.11"

# HTTP Client
reqwest = "0.12.5"

# Logging & Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# AWS S3 Storage
aws-sdk-s3 = "1.86.0"
aws-config = "1.6.3"

# Utilities
anyhow = "1.0.86"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.85"
uuid = "1.12.1"
pulldown-cmark = "0.13.0"
strum_macros = "0.27.1"
strum = "0.27.1"
base64 = "0.22.1"
unicode-segmentation = "1.12.0"
emojis = "0.7.0"
regex = "1.11.1"
clap = "4.5"
clap_derive = "4.5"
unicode-normalization = "0.1.24"
walkdir = "2.5.0"
rustls = "0.23.27"
md-5 = "0.10.6"
url = "2.5.4"