[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
teloxide.workspace = true
tokio.workspace = true
async-openai.workspace = true
dotenv.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
qdrant-client.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
grammers-client.workspace = true

core = { path = "../core" }
