[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
teloxide.workspace = true
teloxide-core.workspace = true
tokio.workspace = true
async-openai.workspace = true
dotenv.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
qdrant-client.workspace = true
chrono.workspace = true
grammers-client.workspace = true
serde_json.workspace = true
unicode-segmentation.workspace = true
emojis.workspace = true
regex.workspace = true

core = { path = "../core" }
