[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai.workspace = true
qdrant-client.workspace = true
serde.workspace = true
sqlx.workspace = true
teloxide.workspace = true
tokio.workspace = true
grammers-client.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
grammers.workspace = true
grammers-session.workspace = true
grammers-tl-types.workspace = true
axum.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tiktoken-rs.workspace = true
