[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai.workspace = true
qdrant-client.workspace = true
serde.workspace = true
sqlx.workspace = true
teloxide.workspace = true
tokio.workspace = true
grammers-client.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
grammers-session.workspace = true
axum.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tiktoken-rs.workspace = true
pulldown-cmark.workspace = true
strum_macros.workspace = true
strum.workspace = true
uuid.workspace = true
http.workspace = true
tower-http.workspace = true
axum-server.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
md-5.workspace = true
unicode-segmentation.workspace = true
emojis.workspace = true
url.workspace = true
csv.workspace = true
rand.workspace = true