[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
config.workspace = true
dotenv.workspace = true
qdrant-client.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true  

core = { path = "../core" }
server = { path = "../server" }

request_app_bot = { path = "../app/request_app_bot" }
the_viper_room_bot = { path = "../app/the_viper_room_bot" }