[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tracing.workspace = true
http.workspace = true
tower-http.workspace = true
axum-server.workspace = true
lazy_static.workspace = true
teloxide.workspace = true
uuid.workspace = true
base64.workspace = true
tokio.workspace = true
serde_json.workspace = true

core = { path = "../core" }
