[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
clap_derive.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true
qdrant-client.workspace = true
dotenv.workspace = true
uuid.workspace = true
async-openai.workspace = true

core = { path = "../core" }